--- a/style.css
+++ b/style.css
@@ -1,95 +1,3 @@
-/* html {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    font-family: "Monument Extended", Arial, Helvetica, sans-serif;
-}
-
-body {
-    color: white;
-    margin: 0;
-    padding: 0;
-    perspective: 1px;
-    transform-style: preserve-3d;
-    height: 100%;
-    width: 100%;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    background: black;
-    justify-content: center;
-}
-
-header {
-    box-sizing: border-box;
-    min-height: 100vh;
-    position: relative;
-    transform-style: inherit;
-    width: 100vw;
-    text-align: center;
-    text-transform: uppercase;
-}
-
-header h1 {
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 64px;
-}
-/* WHAT'S THE POINT OF THIS BELOW?? */
-/* header,
-header:before {
-    background: 50% 50% / cover;
-}
-
-header::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    display: block;
-    background-image: url("parallaxbottom.svg");
-    background-size: cover;
-    transform-origin: center center 0;
-    transform: translateZ(-1px) scale(2);
-    z-index: -1;
-    min-height: 100vh;
-}
-
-.container {
-    z-index: 2;
-    position: absolute;
-    top: 100vh;
-    line-height: 30px;
-    font-weight: lighter;
-    /* padding: 40px;
-    margin: 60px; */
-    /* color: white;
-
-} */
-
-
-
-/* LINKS COLOR */
-/* @link-color: #aae3ea;
-@link-hover-color: darken(@link-color, 15%);
-
-a {
-  color: @link-color;
-  text-decoration: none;
-
-  &:hover {
-    color: @link-hover-color;
-    text-decoration: underline;
-  }
-} */
-
-
 
 /*************************************************************
   HEADER
@@ -126,8 +34,8 @@ header {
   }
  /* non-parallax section */
   .section1 {
-    background: #fafafa;
-    box-shadow: 0 0 20px #333;
+    background: black;
+    /* box-shadow: 0 0 20px #333; */
     z-index: 1;
     position: relative;
   }
@@ -138,9 +46,9 @@ header {
     position: absolute;
     top: 0; left: 0; right: 0; bottom: 0;
     display: block;
-    background: url("https://picsum.photos/800/600") top center;
+    background: url("nricbannerlong.svg") top center;
     background-size: cover;
-    transform: translateZ(-.5px) scale(2);
+    transform: translateZ(-.5px) scale(3);
     z-index: -1;
   }
 
@@ -148,12 +56,14 @@ header {
     HEADINGS
   **************************************************************/
   h1 {
+    font-weight: 500;
     font-size: 4rem;
     text-align: center;
     position: absolute;
     padding: 1rem;
-    background: #fafafa;
-    box-shadow: 0 0 20px #333;
+    color:ivory;
+    /* background: #fafafa; */
+    /* box-shadow: 0 0 20px #333; */
     top: 50%;
     left: 50%;
     transform: translateZ(-1px) scale(2) translate(-25%, -25%);
@@ -165,7 +75,7 @@ header {
   }
 
   .section1 {
-      background-color: #333; //the black color background of your text
+      background-color: black;
   }
 
   .content-wrapper p {
@@ -188,7 +98,7 @@ header {
   html {
     overflow: hidden;
     height: 100%;
-    font-family: "Monument Extended", Arial, Helvetica, sans-serif;
+    font-family: "Poppins", sans-serif;
   }
 
   body {
@@ -197,4 +107,60 @@ header {
     height: 100%;
     perspective: 1px;
     transform-style: preserve-3d;
+    font-family: "Poppins", sans-serif;
+    font-weight:300;
+    background-color: ##FCD9E6;
   }
+
+#references {
+  background-color: #FCD9E6;
+}
+#accordion .card {
+  background-color:#FCD9E6;
+  color:black;
+}
+
+a {
+  color:white;
+  text-decoration: underline;
+}
+a:hover {
+  color:#d9d9d9;
+}
+
+h2 {
+  margin-bottom: 20px;
+}
+
+h3 {
+  font-size:1.5rem;
+  font-weight:bold;
+  margin-bottom: 20px;
+  margin-top: 40px;
+}
+
+.btn {
+  color: black;
+  font-weight:bold;
+  text-decoration: underline;
+}
+.btn-link:hover {
+  color: #737373;
+}
+
+#accordion .card a {
+  color: black;
+  text-decoration: underline;
+}
+#accordion .card a:hover {
+  color: #737373;
+}
+
+blockquote {
+  margin-left: 30px;
+  border-left: 2px solid #ccc;
+  padding: 10px;
+}
+
+div .cardviz {
+  margin-bottom:4rem !important;}
